Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-12198

lnetctl peer show hangs for ~2600 clients, ioctl getting E2BIG

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.14.0, Lustre 2.12.5
    • Lustre 2.12.0
    • None
    • x86 servers, 2.12 no patches, RHEL 7.6
    • 3
    • 9223372036854775807

      command `lnetctl peer show` appears to hang, strace shows looping on:

      ioctl(3, _IOC(_IOC_READ|_IOC_WRITE, 0x65, 0x64, 0xb8), 0x7fffffffccf0) = -1 E2BIG (Argument list too long)
      

      There are 2605 lines in /sys/kernel/debug/lnet/peers.

            martinetd Dominique Martinet (Inactive)
            ruth.klundt@gmail.com Ruth Klundt (Inactive)
            Votes:
            1 Vote for this issue
            Watchers:
            10 Start watching this issue

              Created:
              Updated:
              Resolved: